[workspace]
resolver = "2"
members = ["interface", "pinocchio/interface", "pinocchio/program", "program", "clients/rust"]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/token"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-alloc", "custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.cli]
solana = "3.0.0"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
# generic
assert_matches = "1.5.0"
arrayref = "0.3.9"
ethnum = "1.5.2"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.4"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
proptest = "1.5"
serde = { version = "1.0" }
serde_with = { version = "^3.0" }
lazy_static = "1.5.0"
serial_test = "3.2.0"

# program  
bytemuck = "1.20.0"
borsh = "^0.10"
mollusk-svm = "0.8.0"
mollusk-svm-fuzz-fixture = "0.8.0"
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3"
pinocchio-log = { version = "0.5.1", default-features = false }

# sdk + svm
agave-feature-set = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-account = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-account-info = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-clock = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-cpi = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-keypair = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-msg = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-native-token = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-entrypoint = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-memory = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-option = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-pack = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-test = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2", features = ["agave-unstable-api"] }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", features = ["bytemuck"] }
solana-rent = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-signature = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-signer = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-system-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sysvar = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-transaction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-transaction-error = { git = "https://github.com/jupnet/jupnet-sdk" }
spl-token-interface = { path = "interface", version = "2.0.0" }
spl-token-2022-interface = { git = "https://github.com/jupnet/token-2022", branch = "jupnet" }


[patch.crates-io]
jupnet-signature = { git = "https://github.com/jupnet/jupnet-sdk" }
jupnet-signer = { git = "https://github.com/jupnet/jupnet-sdk" }

# Patch all solana crates to use jupnet-sdk versions to avoid version conflicts
# with mollusk-svm and other crates.io dependencies
solana-account = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-account-info = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-atomic-u64 = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-big-mod-exp = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-bincode = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-blake3-hasher = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-borsh = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-clock = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-cpi = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-define-syscall = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-epoch-rewards = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-epoch-schedule = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-fee-calculator = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-hash = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-instruction-error = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-instructions-sysvar = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-keccak-hasher = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-keypair = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-last-restart-slot = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-message = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-msg = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-native-token = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-entrypoint = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-memory = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-option = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-pack = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-rent = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sanitize = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sdk-macro = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-secp256k1-recover = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-seed-phrase = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-serde-varint = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-serialize-utils = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sha256-hasher = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-short-vec = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-signature = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-signer = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-slot-hashes = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-slot-history = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-stable-layout = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-system-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sysvar = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sysvar-id = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-transaction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-transaction-error = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-address = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-address-lookup-table-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-nonce = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-epoch-stake = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-example-mocks = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-packet = { git = "https://github.com/jupnet/jupnet-sdk" }

# Patch SVM crates to use jupnet-svm versions
agave-feature-set = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
agave-syscalls = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-bpf-loader-program = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-compute-budget = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-program-runtime = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-program-test = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-callback = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-feature-set = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-log-collector = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-measure = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-timings = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-transaction = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-svm-type-overrides = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-transaction-context = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-system-program = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-vote-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-client-traits = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-seed-derivable = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-presigner = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-genesis-config = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-derivation-path = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-commitment-config = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-cluster-type = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-epoch-info = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-quic-definitions = { git = "https://github.com/jupnet/jupnet-sdk" }
jupnet-crypto = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-compute-budget-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-loader-v2-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-loader-v3-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-loader-v4-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-feature-gate-interface = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-offchain-message = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-system-transaction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-inflation = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-hard-forks = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-poh-config = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-time-utils = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-shred-version = { git = "https://github.com/jupnet/jupnet-sdk" }
