[package]
name = "spl-token-interface"
version = "2.0.0"
description = "Solana Program Library Token Interface"
documentation = "https://docs.rs/spl-token-interface"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num_enum = { workspace = true }
num-traits = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
thiserror = { workspace = true }
ethnum = { workspace = true }

[dev-dependencies]
proptest = { workspace = true } 
strum = { workspace = true } 
strum_macros = { workspace = true } 

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
