[package]
name = "spl-token"
version = "9.0.0"
description = "Solana Program Library Token"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = { workspace = true } 
bytemuck = { workspace = true } 
ethnum = { workspace = true }
num-derive = { workspace = true } 
num-traits = { workspace = true }
num_enum = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-program-memory = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true, features = ["bytemuck"] }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-sysvar = { workspace = true, features = ["bincode"] }
spl-token-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-clock = { workspace = true }
solana-native-token = { workspace = true }
solana-rent = { workspace = true, features = ["sysvar"] }
solana-system-interface = { workspace = true, features=["bincode"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
