[package]
name = "spl-token-client"
version = "0.0.0"
description = "A generated Rust library for the Token program"
repository = "https://github.com/solana-program/token"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
