[package]
name = "pinocchio-token-interface"
version = "0.0.0"
description = "Pinocchio instructions and types for interacting with SPL Token program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
ethnum = { workspace = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }

[dev-dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
